# MNIST_Perceptron

Perceptron/: CMakeLists.txt  Perceptron.cpp  Perceptron.h  Util.cpp  Util.h  main.cpp
Perceptron2/: CMakeLists.txt  ParseMNIST.h  Perceptron.h  Util.cpp  Util.h  main.cpp
PythonPerceptron/pythonProject/: main.py  main2.py
